--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-altair==4.0
+altair<4.0
 numpy>=1.17.3
-pandas==1.5.3
+pandas<=1.5.3
 streamlit==1.13.0
 tensorflow==2.8.0
 pandas-datareader==0.10.0
